--- a/home/home.html
+++ b/home/home.html
@@ -14,7 +14,7 @@
 <!-- Navigation Bar -->
     <div id="nav">
         <div id="nav1">
-            <p><a href="#clientage">clientage</a></p>
+            <p style="margin:5px;font-size:45px;"><a href="#clientage">clientage</a></p>
             <p><a href="">Gifts</a></p>
             <p><a href="">New</a></p>
             <p><a href="">Women</a></p>
@@ -47,24 +47,24 @@
 
 <!--  -->
     <div id="background_image1">
-        <div>
+        <div><a href="https://www.jcrew.com/in/plp/womens/features/ski-shop?intcmp=newHP_columntouts_1_women_ski&om_i=newHP_p2">
             <img src="https://live.staticflickr.com/65535/52562979204_694d1ff0bc_w.jpg">
-        </div>
-        <div>
+        </div></a>
+        <div><a href="https://www.jcrew.com/in/plp/womens/features/resort-wear?intcmp=newHP_columntouts_2_women_resort&om_i=newHP_p2">
             <img src="https://live.staticflickr.com/65535/52563159335_ac663e6d97_w.jpg">
-        </div>
-        <div>
+        </div></a>
+        <div><a href="https://www.jcrew.com/in/plp/womens/categories/clothing/sweaters?intcmp=newHP_columntouts_3_women_sweaters&om_i=newHP_p2">
             <img src="https://live.staticflickr.com/65535/52562979164_6b4fcc6e4d_w.jpg">
-        </div>
-        <div>
+        </div></a>
+        <div><a href="https://www.jcrew.com/in/plp/womens/categories/clothing/pajamas-and-intimates?intcmp=newHP_columntouts_4_women_pajamas&om_i=newHP_p2">
             <img src="https://live.staticflickr.com/65535/52562693146_23fd81f5d4_w.jpg">
-        </div>
-        <div>
+        </div></a>
+        <div><a href="https://www.jcrew.com/in/plp/womens/categories/clothing/coats-and-jackets?intcmp=newHP_columntouts_5_women_coats&om_i=newHP_p2">
             <img src="https://live.staticflickr.com/65535/52562693116_cfc0557671_w.jpg">
-        </div>
-        <div>
+        </div></a>
+        <div><a href="https://www.jcrew.com/in/plp/womens/features/new-arrivals?intcmp=newHP_columntouts_6_women_new&om_i=newHP_p2">
             <img src="https://live.staticflickr.com/65535/52563159250_530b501cc5_w.jpg">
-        </div>
+        </div></a>
     </div>
 <!--  -->
 
@@ -84,40 +84,41 @@
 
 
 <!-- Meet Our Creativity Community -->
-
-    <div id="creative_community">
+    <div id="creative">
+        <div id="creative_community">
         <div>
             <div><img src="https://www.jcrew.com/brand_creative/2022/202204-Apr/logo_jcrew_collective_20220315_blk.png?imformat=generic" alt=""></div>
             <div id="b"><p>Meet our creative community →</p></div>
         </div>
         <br><br>
         <div id="creative_team">
-            <div>
+            <div><a href="https://www.jcrew.com/in/feature/creative-spirits-with-marie-marot?intcmp=newHP_columntouts_1_null_featurecreativespiritswithmariemarot&om_i=newHP_p4">
                 <img src="https://www.jcrew.com/brand_creative/homepage2022/11-Nov/2022nov_1025_hp_w_img12.jpg" alt="">
                 <div>
                 <p class="creativep1">Creative Spirits Series</p>
-                <p class="creativep2">Marie Marot X J.Crew</p>
+                <p class="creativep2">Marie Marot X J.Crew</p></a>
                 <p class="creativep3">Shop our collab</p>
                 </div>
             </div>
-            <div>
+            <div><a href="https://www.jcrew.com/in/r/feature/womens/layer-love-with-marjon-carlos?intcmp=newHP_columntouts_2_women_layer&om_i=newHP_p4">
                 <img src="https://www.jcrew.com/brand_creative/homepage2022/10-Oct/2022oct_0927_hp_w_img7.jpg" alt="">
                 <div>
                 <p class="creativep1">That fall feeling</p>
                 <p class="creativep2">Layer love with
-                    Marjon Carlos</p>
+                    Marjon Carlos</p></a>
                 <p class="creativep3">Shop her story</p>
                 </div>
             </div>
-            <div>
+            <div><a href="https://www.jcrew.com/in/r/feature/womens/a-cashmere-remix-with-lucy-williams?intcmp=newHP_columntouts_3_women_a&om_i=newHP_p4">
                 <img src="https://www.jcrew.com/brand_creative/homepage2022/10-Oct/2022oct_0927_hp_w_img8.jpg" alt="">
                 <div>
                 <p class="creativep1">Heritage made modern</p>
-                <p class="creativep2">A Cashmere Remix with Lucy Williams</p>
+                <p class="creativep2">A Cashmere Remix with Lucy Williams</p></a>
                 <p class="creativep3">Shop her story</p>
                 </div>
             </div>
         </div>
+    </div>
 
 
 
@@ -126,31 +127,31 @@
         <div style="width: 80%;margin: auto;"><p style="font-size: 50px;">More Stories</p></div>
 
         <div id="more_stories">
-            <div>
+            <div><a href="https://www.jcrew.com/in/feature/most-wanted-the-limited-edition-Barbour-x-jcrew-agnetha-jacket?intcmp=newHP_columntouts_4_null_featuremostwantedthelimitededitionBarbourxjcrewagnethajacket&om_i=newHP_p4">
                 <img src="https://www.jcrew.com/brand_creative/homepage2022/14-Dec3/gifcyb_w_agnetha.jpg" alt="">
                 <div>
                 <p>Most wanted: limited-edition Barbour® X J.Crew Agnetha jacket</p>
-                <h4><U>Get a closer look</U></h4>
+                <h4><U>Get a closer look</U></h4></a>
                 </div>
             </div>
-            <div>
+            <div><a href="https://www.jcrew.com/in/plp/womens/features/tartan-time?intcmp=newHP_columntouts_5_women_tartan&om_i=newHP_p4">
                 <img src="https://www.jcrew.com/brand_creative/homepage2022/12-Dec/2022dec_1108_hp_w_img9.jpg" alt="">
                 <div>
                 <p>The edit: tartan time</p>
-                <h4><u>Shop the festive roundup</u></h4>
+                <h4><u>Shop the festive roundup</u></h4></a>
                 </div>
             </div>
-            <div>
+            <div><a href="https://www.jcrew.com/in/plp/womens/features/olympias-picks?intcmp=newHP_columntouts_6_women_olympias&om_i=newHP_p4">
                 <img src="https://www.jcrew.com/brand_creative/homepage2022/11-Nov/2022nov_1025_hp_w_img10.jpg" alt="">
                 <div>
                 <p>Olympia’s picks</p>
-                <h4><U>Shop her December edit</U></h4>
+                <h4><U>Shop her December edit</U></h4></a>
                 </div>
             </div>
-            <div>
+            <div><a href="https://www.jcrew.com/in/r/feature/womens/design-try-ons-the-holiday-collection?intcmp=newHP_columntouts_7_women_design&om_i=newHP_p4">
                 <img src="https://www.jcrew.com/brand_creative/homepage2022/12-Dec/2022dec_1108_hp_w_img11.jpg" alt="">
                 <div>
-                <p>Design Try-ons: the Holiday Collection</p>
+                <p>Design Try-ons: the Holiday Collection</p></a>
                 <h4><U>Shop the video</U></h4>
                 </div>
             </div>
@@ -224,7 +225,10 @@
         <div><img src="https://edge.curalate.com/v1/img/AjbuNbyBwxHGhtPnE4tDL8xcP6qiNXXiL6YhwuQvGdA=/w/450?typ=webp" alt=""></div>
         <div><img src="https://edge.curalate.com/v1/img/R40FgVWgiyl5NC7-2uyMPq5mClNxABzJFSDwbYUGCCw=/w/450?typ=webp" alt=""></div>
         <div><img src="https://edge.curalate.com/v1/img/jozBwjxmDi2NsqTmWf1Vudfhxo5b5cX5byYwoNvdjOc=/w/450?typ=webp" alt=""></div>
-        <div><img src="https://edge.curalate.com/v1/img/JAiqA8ZwrCD_Hw6r-4_jUypsnQK5lSvRQ5r73UXUKLM=/w/450?typ=webp" alt=""></div> -->
+        <div><img src="https://edge.curalate.com/v1/img/JAiqA8ZwrCD_Hw6r-4_jUypsnQK5lSvRQ5r73UXUKLM=/w/450?typ=webp" alt=""></div>
+     -->
+     <div style="justify-content: flex-end;color: blue;"><a href="https://www.bazaarvoice.com/products/visual-and-social-content/?utm_source=XTwCLLDaMTZBuUgY&utm_medium=referral&utm_campaign=powered-by&utm_term=layout">🅱&#160Powered by Bazaarvoice</a></div>
+    
     </div>
 
 
@@ -232,29 +236,29 @@
 <!-- More You Need to See -->
 
     <div id="More_you_need_to_see">
-        <div>
+        <div><a href="https://www.jcrew.com/in/plp/womens/categories/clothing/sweaters?intcmp=newHP_categoryrecs_1&om_i=newHP_p7">
             <img src="https://www.jcrew.com/s7-img-facade/BD613_RD6052_m?wid=416" alt="">
-            <p>Shop Women's Sweaters</p>
+            <p>Shop Women's Sweaters</p></a>
         </div>
-        <div>
+        <div><a href="https://www.jcrew.com/in/plp/womens/categories/clothing/shirts-and-tops?intcmp=newHP_categoryrecs_2&om_i=newHP_p7">
             <img src="https://www.jcrew.com/s7-img-facade/BN161_YD2172_m?wid=416" alt="">
-            <p>Shop Women's Shirts & Tops</p>
+            <p>Shop Women's Shirts & Tops</p></a>
         </div>
-        <div>
+        <div><a href="https://www.jcrew.com/in/plp/womens/categories/clothing/t-shirts-and-tank-tops?intcmp=newHP_categoryrecs_3&om_i=newHP_p7">
             <img src="https://www.jcrew.com/s7-img-facade/BM312_PT3361_m?wid=416" alt="">
-            <p>Shop Women's T-shirts & Tank Tops</p>
+            <p>Shop Women's T-shirts & Tank Tops</p></a>
         </div>
-        <div>
+        <div><a href="https://www.jcrew.com/in/plp/womens/categories/clothing/dresses-and-jumpsuits?intcmp=newHP_categoryrecs_4&om_i=newHP_p7">
             <img src="https://www.jcrew.com/s7-img-facade/BM874_YD2455_m?wid=416" alt="">
-            <p>Shop Women's Dresses & Jumpsuits</p>
+            <p>Shop Women's Dresses & Jumpsuits</p></a>
         </div>
-        <div>
+        <div><a href="https://www.jcrew.com/in/plp/womens/categories/clothing/blazers?intcmp=newHP_categoryrecs_5&om_i=newHP_p7">
             <img src="https://www.jcrew.com/s7-img-facade/BM557_YD2455_m?wid=416" alt="">
-            <p>Shop Women's Pants</p>
+            <p>Shop Women's Pants</p></a>
         </div>
-        <div>
+        <div><a href="https://www.jcrew.com/in/plp/womens/categories/clothing/pants?intcmp=newHP_categoryrecs_6&om_i=newHP_p7">
             <img src="https://www.jcrew.com/s7-img-facade/BM751_BK0001_m?wid=416" alt="">
-            <p>Shop Women's Pants</p>
+            <p>Shop Women's Pants</p></a>
         </div>
     </div>         
 
