--- a/men shopping/men_shopping.html
+++ b/men shopping/men_shopping.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping</title>
+    <link rel = "icon" href = "https://live.staticflickr.com/65535/52563473413_acddb191f5_w.jpg" 
+        type = "image/x-icon">
     <link rel="stylesheet" href="men_shopping.css">
 </head>
 <body>
