--- a/home/shopping.html
+++ b/home/shopping.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>girl Shopping</title>
+    <title>Shopping</title>
     <link rel = "icon" href = "https://live.staticflickr.com/65535/52563473413_acddb191f5_w.jpg" 
         type = "image/x-icon">
-    <link rel="stylesheet" href="girl_shopping.css">
+    <link rel="stylesheet" href="shopping.css">
 </head>
 <body>
+
+    <div style="text-align: center;">
+        <a style="cursor: pointer;" href="./home.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
+    </div>
     <!-- Heading -->
     <div id="heading">
-        <p>Girls' Gift Guide </p>
+        <p>The Holiday <span id="a">Collection</span></p>
     </div>
 
 
     <!-- Shopping List Nav-->
     <div id='second_nav'>
     <div>
-        <button id="filter">Filters</button>&#160
+        <button id="filter">Filters</button>
         <button id="featured">Featured</button>
     </div>
     <div>
@@ -189,6 +193,23 @@
     </div>
 
 
+    <br>
+    <div id="ghj">
+      <div class="pagination">
+        <!-- <a href="#">&laquo;</a> -->
+        <a href="./women_shopping.html">1</a>
+        <a href="./men_shopping.html">2</a>
+        <a href="./girl_shopping.html">3</a>
+        <a href="./boy_shopping.html">4</a>
+        <a href="./home_shopping.html">5</a>
+        <a href="#" class="active">6</a>
+        <a href="./cart.html">🛒</a>
+        <!-- <a href="#">&raquo;</a> -->
+      </div>
+    </div>
+    <br>
+    
+
     <!-- Last Image Div -->
 
     <div id="last_image_div">
@@ -286,5 +307,5 @@
 
     
 </body>
-<script src="girl_shopping.js"></script>
+<script src="shopping.js"></script>
 </html>
