--- a/home/product.html
+++ b/home/product.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div style="text-align: center;">
-        <a style="cursor: pointer;" href="./home.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
+        <a style="cursor: pointer;" href="./index.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
     </div>
     <p style="text-align: center;">Have a question? We can help. <u>*</u></p><br>
 
@@ -44,36 +44,47 @@
 
     <div id="view">
         <div id='image'>
+            <!-- <img src="" alt="" id="img"> -->
+            <img src="https://www.jcrew.com/s7-img-facade/BM302_RD6052_m?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=540&hei=540" alt="">
         </div>
         <div>
             <div>
-            <p>ONLY A FEW LEFT</p>
-            <P id="title"></P>
-            <p id="price"></p>
-            <p>prices include duties and taxes</p>
-            <button id="button"></button>
-            <button>❤</button></div>
-            <div>
-                <ul>Size & Fit</ul>
-                <li>XXS (2-3); XS (4-5); S (6-7); M (8-9); L (10-11); XL (12-14); XXL (15-16).</li>
+            <p style="font-weight: bold;font-size: large;color: red;">ONLY A FEW LEFT</p>
+            <P style="font-size: larger;font-weight: bolder;font-family: Arial, Helvetica, sans-serif;">Cotton cable-knit sweater</P>
+            <p style="font-family:Arial, Helvetica, sans-serif;font-weight:lighter ">INR - 12,345</p>
+            <p style="color:grey;">prices include duties and taxes</p>
+            <button id="button" id="cart">🛒</button>&#160&#160&#160&#160
+            <button id="button" id="favourite">❤</button>&#160&#160&#160&#160
+            <a href="./checkout.html"><button style="height:30px; width: 80px;" id="button">Checkout</button></a></div>
+            <div style="padding-left: 20px;">
+                <ul style="font-size: 24px;">Size & Fit</ul>
+                <li>XXS (2-3);</li>
+                <br>
+                          <li>  S (6-7);</li><br>
+                     <li>  M (8-9);</li><br>
+                       <li>  L (10-11);</li><br>
+                       <li>  XL (12-14);</li><br>
+                         <li> XXL (15-16).</li>
             </div>
-            <div>
-                <p>Product Details</p>
-                <ul>A mini version of Dad's most classic fall sweater - in three timeless colors. This cotton cable knit is perfect for year-round wear, with shorts and sneakers now, and layered with a button-down shirt and jeans as it gets chillier.</ul>
+            <div style="font-family: Arial, Helvetica, sans-serif;padding-left: 20px;">
+                <p style="font-size: 20px;font-weight: 600;">Product Details</p>
+                <p style="font-size: 16px;">A mini version of Dad's most classic fall sweater - in three timeless colors. This cotton cable knit is perfect for year-round wear, with shorts and sneakers now, and layered with a button-down shirt and jeans as it gets chillier.</p>
                 <li>100% cotton.</li>
                 <li>Machine wash.</li>
                 <li>Import.</li>
                 <li>Item AZ762.</li>
             </div>
             <div>
-                <p>Our Fabrics, Re-imagined</p>
+                <p style="font-family: Arial, Helvetica, sans-serif;font-weight: 700;">Our Fabrics, Re-imagined</p>
                 <img src="https://live.staticflickr.com/65535/52567459850_6f86da281b_w.jpg" alt="">
             </div>
-            <p>Learn more  Shop All Re-imagined </p>
+            <p style="font-family: Arial, Helvetica, sans-serif;font-weight: 600;"><a href="https://www.jcrew.com/s/corporate-responsibility">Learn more</a> &#160  <a href="https://www.jcrew.com/shop/re-imagined">Shop All Re-imagined </a></p>
         </div>
     </div>
+  <br><b><br></b>
 
-    <p>There are no reviews for this product. Be the first to comment. Write a Review</p>
+  
+    <p style="font-size: 17px;">&#160&#160&#160&#160&#160There are no reviews for this product. Be the first to comment.<a href="javascript://">Write a Review</a> </p>
 <!-- Instagram Handle -->
 
 <div id="last_second">
