--- a/home/shopping.html
+++ b/home/shopping.html
@@ -12,7 +12,7 @@
 <body>
 
     <div style="text-align: center;">
-        <a style="cursor: pointer;" href="./home.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
+        <a style="cursor: pointer;" href="./index.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
     </div>
     <!-- Heading -->
     <div id="heading">
