--- a/home/cart.html
+++ b/home/cart.html
@@ -11,17 +11,18 @@
 </head>
 <body>
     <div style="text-align: center;">
-        <a style="cursor: pointer;" href="./home.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
+        <a style="cursor: pointer;" href="./index.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
     </div>
     <p style="text-align: center;font-family: Arial, Helvetica, sans-serif;font-size: 14px;">Have a question? We can help. <u>*</u></p>
-    <div id="first_div"><b>Unfortunately, your order will not arrive by 12/24.</b></div>
+    <div id="first_div"><b>Unfortunately, your order will not arrive by 6/2023.</b></div>
     
     
     <div>
         <div id="bag">
             <div id="second_div"> <p><b>SHOPPING BAG(<span id="cart_total">0</span>)</b></p> <p>Have an account? <span>Sign in</span></p></div>
             <div id="shopping_bag"> <p>Your Shopping Bag is empty.</p></div>
-        </div>    
+        </div> <br>
+        <div style="padding-left: 267px;"><a href="./checkout.html"><button style="width:47%;font-size:30px;height:40px;background-color: black ;color: white;">checkout</button></a></div>   <br>
         <div id="saved">
             <div id="second_div"> <p id="a"><b>FAVOURITE(<span id="fav_total">0</span>)</b></p> </div>
             <div id="favourite_items"> 
