--- a/home/checkout.html
+++ b/home/checkout.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
+    
     <style>
-
+#product_display{
+    padding: 10px;
+}
 
 
 
@@ -133,11 +136,12 @@ text-align: center;
 
 
     </style>
+<!-- ***************************************************************************************************** -->
 </head>
 <body>
 
     <div style="text-align: center;">
-        <a style="cursor: pointer;" href="./home.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
+        <a style="cursor: pointer;" href="./index.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
     </div>
 <div id="aabb">
     <p id="aa">clientage </p>
@@ -173,19 +177,19 @@ text-align: center;
         <div style="border:1px solid rgb(213, 205, 205); padding-left: 5px;">
             <h3 style="font-size: 20px;">Delivery Address</h3>
             <div id="fff">
-            <div><input type="text" placeholder="*First Name">&#160&#160&#160&#160&#160&#160<input type="text" placeholder="*Last Name"></div>
-            <br><div id="q" ><input style="width: 97%;" type="text" placeholder="*Country  India"></div>
-            <br><div id="q" ><input style="width: 97%;" type="text" placeholder="*Address Line 1"></div>
+            <div><input type="text" id="firstname" placeholder="*First Name">&#160&#160&#160 <br><br><input type="text" id="lastname"  placeholder="*Last Name"></div>
+            <br><div id="q" ><input style="width: 97%;" type="text" id="country"  placeholder="*Country  India"></div>
+            <br><div id="q" ><input style="width: 97%;" type="text" id="address1"  placeholder="*Address Line 1"></div>
             <p>Start typing a street address</p>
-            <input type="text"  style="width: 97%;" id="q" placeholder="Address Line 2"><br>
-            <br><div><input type="number" placeholder="*Postal Code">&#160&#160&#160&#160&#160&#160<input type="text" placeholder="*City"></div>
+            <input type="text"  style="width: 97%;" id="q"  id="address2"  placeholder="Address Line 2"><br>
+            <br><input type="number"  id="postalcode" placeholder="*Postal Code"> <br><br><input type="text" id="city"  placeholder="*City">
             <div><p><label class="container">
                 <input type="checkbox" style="width: 20px;height: 20px;">
                 <span class="checkmark"></span><b>Save this address for my next purchase.</b>
             </label></p> </div>
             <br><br>
-            <input type="number" style="width: 97%;" placeholder="22132 43483"><br><br>
-            <input type="email" style="width: 97%;" placeholder="*Email Address">
+            <input type="number" id="number"  style="width: 97%;" placeholder="22132 43483"><br><br>
+            <input type="email" id="email"  style="width: 97%;" placeholder="*Email Address">
             <p style="font-size: 15px;">🍃 <b>Your order is 100% Carbon Neutral</b></p>
             <p style="font-size:13px;"><b>Powered by <span style="font-size: 20px;">esw</b></span>❓</p>
             <p style="font-size: 13px;font-family:Arial, Helvetica, sans-serif ;line-height: 15px;"><label class="container">
@@ -197,8 +201,13 @@ text-align: center;
         </div>
     </div>
 
-    <div id="product_display"  style="border:1px solid rgb(213, 205, 205); padding-left: 5px;">
+    <div id="product_display"  style="border:1px solid rgb(213, 205, 205); padding-left: 5px;height: 400px;">
 
+        <a href="./cart.html"><button style="width: 100%;height:38px;background-color: black;color: white;">Back to Cart</button></a>
+        <br>
+        <br>
+        <img style="width: 90%;" src="https://www.jcrew.com/s7-img-facade/BM302_RD6052?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&wid=408&hei=408" alt="">
+        <p style="font-family: Arial, Helvetica, sans-serif;font-weight: 600;">TOTAL&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160&#160 INR 19,251.00</p>
     </div>
 </div>
 
@@ -279,9 +288,40 @@ text-align: center;
     </div>
 
 </body>
+<!-- /////////////////////////////////////////////////////////////////////////////////////////////// -->
 <script>
+
+
+    // let firstname = document.getElementById('firstname').value
+    // let lastname = document.getElementById('lastname').value
+    // let country = document.getElementById('country').value
+    // let address1 = document.getElementById('address1').value
+    // let address2 = document.getElementById('address2').value
+    // let postalcode = document.getElementById('postalcode').value
+    // let number = document.getElementById('number').value
+    // let email = document.getElementById('email').value
+
+
+    // let details ={
+    //     name : firstname + lastname,
+    //     email : email,
+    //     number : number,
+    //     address1 : address1,
+    //     address2 : address2,
+    //     postalcode : postalcode,
+    //     country : country,
+    // }
+    // localStorage.setItem('details',JSON.stringify(details))
+    // console.log(true)
+
+
+
     let product_display = document.getElementById('product_display');
     let Checkout = JSON.parse(localStorage.getItem('checkout'))||[];
+    let purchase = document.getElementById('purchase');
+purchase.addEventListener('click',()=>{
+    alert('Order Placed via Cash on Delivery')
+})
 
 
     checkOut(Checkout)
@@ -291,16 +331,15 @@ text-align: center;
         data.forEach(element => {
             let descriptions = document.createElement('h4');
             descriptions.textContent = element.descriptions
-
             let image = document.createElement('img');
             image.setAttribute('src',element.avatar);
-
             let h5 = document.createElement('h5');
-            h5.textContent = 'Total' +"-"+element.price
-
+            h5.textContent = 'Total' +"-"+element.price;
         });
 
     }
+
+
     let button = document.getElementById('purchase')
     button.addEventListener('click',()=>{
         alert('product placed succesfully')
