--- a/home/girl_shopping.html
+++ b/home/girl_shopping.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div style="text-align: center;">
-        <a style="cursor: pointer;" href="./home.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
+        <a style="cursor: pointer;" href="./index.html"><img style="height: 200px;" src="https://live.staticflickr.com/65535/52562910881_e1a6dc6c2c_n.jpg" alt=""></a>
     </div>
     <!-- Heading -->
     <div id="heading">
